<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_item"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dialog_input_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/title_will_be_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_label" />

    <EditText
        android:id="@+id/dialog_input_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/description_will_be_here"
        app:layout_constraintEnd_toEndOf="@+id/dialog_input_title"
        app:layout_constraintStart_toStartOf="@+id/dialog_input_title"
        app:layout_constraintTop_toBottomOf="@+id/dialog_input_title" />

    <EditText
        android:id="@+id/dialog_input_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:inputType="phone"
        android:hint="@string/number_will_be_here"
        app:layout_constraintEnd_toEndOf="@+id/dialog_input_description"
        app:layout_constraintStart_toStartOf="@+id/dialog_input_description"
        app:layout_constraintTop_toBottomOf="@+id/dialog_input_description" />

    <Button
        android:id="@+id/dialog_ok_button"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ok"
        app:layout_constraintEnd_toStartOf="@+id/dialog_cancel_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_input_number" />

    <Button
        android:id="@+id/dialog_cancel_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialog_ok_button"
        app:layout_constraintTop_toBottomOf="@+id/dialog_input_number" />

</androidx.constraintlayout.widget.ConstraintLayout>
